Added a paragraph of lorem ipsum

--- a/hello.html
+++ b/hello.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello, world!</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est, laboriosam commodi culpa odit consequatur facilis consectetur vero dignissimos odio modi, sit sapiente ex?</p>
 </body>
 </html>
