--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello, world!</h1>
+    <h2>This is a sub heading</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est, laboriosam commodi culpa odit consequatur facilis consectetur vero dignissimos odio modi, sit sapiente ex?</p>
 </body>
 </html>
